--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^6.0.0
   http: ^1.1.0
   google_fonts: ^6.2.1
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
