--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^1.1.0
   google_fonts: ^6.2.1
   carousel_slider: ^5.1.1
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
