--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  #state management
   provider: ^6.0.0
+
+  #http request
   http: ^1.1.0
+
+  #Ui components
   google_fonts: ^6.2.1
   carousel_slider: ^5.1.1
   curved_navigation_bar: ^1.0.6
   flutter_launcher_icons: ^0.14.4
+  go_router: ^16.0.0
+
+  #utils
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
